deployments/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-postgresdb-storage
          persistentVolumeClaim:
            claimName: todo-pvc
      containers:
        - image: postgres:9.6.3
          name: my-database
          ports:
          - containerPort: 5432
          resources: {}
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data:Z"
            name: todo-postgresdb-storage
        - name: todo
          image: index.docker.io/cage1016/gokit-todo
---
kind: Service
apiVersion: v1
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
    - port: 80
      name: http
      targetPort: 10120
    - port: 8000
      name: grpc
      targetPort: 10121
---
kind: Service
apiVersion: v1
metadata:
  name: todo-external
  labels:
    app: todo
spec:
  type: LoadBalancer
  selector:
    app: todo
  ports:
    - port: 10120
      name: http
      targetPort: 10120
    - port: 10121
      name: grpc
      targetPort: 10121
