deployments/k8s-nginx-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo
  template:
    metadata:
      labels:
        app: todo
    spec:
      volumes:
        - name: todo-postgresdb-storage
          persistentVolumeClaim:
            claimName: todo-pvc
      containers:
        - image: postgres:9.6.3
          name: my-database
          ports:
          - containerPort: 5432
          resources: {}
          volumeMounts:
          - mountPath: "/var/lib/postgresql/data:Z"
            name: todo-postgresdb-storage
        - name: todo
          image: index.docker.io/cage1016/gokit-todo
---
kind: Service
apiVersion: v1
metadata:
  name: todo
spec:
  selector:
    app: todo
  ports:
    - port: 80
      name: http
      targetPort: 10120
    - port: 8000
      name: grpc
      targetPort: 10121
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
        - path: /api/v1/todo(/|$)(.*)
          backend:
            serviceName: todo
            servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: index.docker.io/cage1016/gokit-todo-frontend:latest
---
kind: Service
apiVersion: v1
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      name: http
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path:
          backend:
            serviceName: frontend
            servicePort: 80
